[package]
name = "checksum"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to calculate file checksums using various hash algorithms"
authors = ["Your Name"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
hex = "0.4"
anyhow = "1.0"
